# kavynex

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  rust-toolchain.toml  stryker.config.json  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  mutation.yml  release.yml  scheduled-audit.yml
docs/: ARCHITECTURE.md  DATABASE.md  DIRECTORIES.md
scripts/: bump-version.js  bump-version.test.js  check-js-advisories.js  check-js-advisories.test.js  check-js-licenses.js  check-js-licenses.test.js  verify-latest-json.js  verify-latest-json.test.js  verify-node-version.js  verify-node-version.test.js  verify-release-version.js  verify-release-version.test.js  version-utils.js  version-utils.test.js
shared/: youtube-handle-cases.json  yt-dlp-format-id-cases.json
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  deny.toml  tauri.conf.json  windows-app-manifest.xml
src-tauri/.cargo/: config.toml  mutants.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: channels.rs  comments.rs  database.rs  library.rs  live_chat.rs  logging.rs  media.rs  mod.rs  security.rs  settings.rs  test_ipc.rs  thumbnail.rs  videos.rs  yt_dlp.rs
src-tauri/src/models/: mod.rs  yt_dlp.rs
src-tauri/src/services/: binaries.rs  channel_repository.rs  cleanup.rs  database.rs  db_backup.rs  db_schema.rs  filesystem.rs  library.rs  library_cleanup.rs  library_guard.rs  library_integrity.rs  library_lock.rs  library_media.rs  library_migration.rs  library_paths.rs  library_recovery.rs  library_summary.rs  live_chat_storage.rs  logger.rs  media_comments.rs  mod.rs  process_registry.rs  ssrf_guard.rs  temp_paths.rs  thumbnail.rs  thumbnail_download.rs  thumbnail_persist.rs  thumbnail_temp.rs  video_repository.rs  yt_dlp.rs  yt_dlp_cookies.rs  yt_dlp_download.rs  yt_dlp_events.rs  yt_dlp_metadata.rs  yt_dlp_registry.rs  yt_dlp_url.rs
src-tauri/src/services/db_backup/: external.rs  import.rs  integrity.rs  mod.rs
src-tauri/src/services/db_schema/: ddl.rs  introspection.rs  mod.rs
src-tauri/src/services/video_repository/: media_page.rs  mod.rs
src-tauri/src/services/yt_dlp_download/: command.rs  mod.rs
src-tauri/src/utils/: format.rs  hash.rs  io.rs  mod.rs  naming.rs  path.rs  process.rs  task.rs  text.rs  validation.rs
src-tauri/tests/fixtures/: kavynex_v1_user_version_5.sqlite
src/constants/: cookies-browsers.ts  error-codes.test.ts  error-codes.ts  events.ts  tauri-commands.ts  ui-text.ts  yt-dlp-events.ts
src/hooks/: use-add-media-form-state.test.ts  use-add-media-form-state.ts  use-add-media-form.test.ts  use-add-media-form.ts  use-add-media-workflow.test.ts  use-add-media-workflow.ts  use-app-bootstrap.test.ts  use-app-bootstrap.ts  use-app-settings-actions.test.ts  use-app-settings-actions.ts  use-app-settings-storage.test.ts  use-app-settings-storage.ts  use-app-settings.test.ts  use-app-settings.ts  use-app-update.test.ts  use-app-update.ts  use-async-flag.test.ts  use-async-flag.ts  use-channel-actions.test.ts  use-channel-actions.ts  use-channel-library-filters.test.ts  use-channel-library-filters.ts  use-channel-media-list.test.ts  use-channel-media-list.ts  use-channels.test.ts  use-channels.ts  use-database-integrity-check.test.ts  use-database-integrity-check.ts  use-diagnostics.test.ts  use-diagnostics.ts  use-error-modal.test.ts  use-error-modal.ts  use-grid-scroll-restoration.test.ts  use-grid-scroll-restoration.ts  use-home-actions.test.ts  use-home-actions.ts  use-home-controller.test.tsx  use-home-controller.tsx  use-home-diagnostics-focus.test.ts  use-home-diagnostics-focus.ts  (+45 more)
src/lib/: db.ts  ipc-schemas.test.ts  ipc-schemas.ts  schema-bridge.ts  schema-ddl.ts  schema.test.ts  schema.ts  tauri-client.test.ts  tauri-client.ts  tauri-command-returns.ts  tauri-platform.test.ts  tauri-platform.ts
src/pages/: Home.tsx
src/repositories/: channel-repository.test.ts  channel-repository.ts  index.ts  media-repository.test.ts  media-repository.ts
src/services/: app-settings-command-service.ts  app-update-service.ts  asset-scope-service.ts  author-navigation.ts  channel-artifacts-service.test.ts  channel-artifacts-service.ts  channel-input-service.test.ts  channel-input-service.ts  channel-service.test.ts  channel-service.ts  database-service.test.ts  database-service.ts  diagnostics-external-tools.ts  diagnostics-library-integrity.test.ts  diagnostics-library-integrity.ts  diagnostics-library-summary.ts  diagnostics-live-chat-integrity.test.ts  diagnostics-live-chat-integrity.ts  diagnostics-live-chat-storage.ts  diagnostics-rules.test.ts  diagnostics-rules.ts  diagnostics-runtime.ts  diagnostics-service.test.ts  diagnostics-service.ts  external-tools-service.ts  index.ts  library-service.test.ts  library-service.ts  live-chat-service.test.ts  live-chat-service.ts  media-artifacts-service.test.ts  media-artifacts-service.ts  media-comments-service.ts  media-download-service.test.ts  media-download-service.ts  media-file-service.test.ts  media-file-service.ts  media-input-service.test.ts  media-input-service.ts  media-metadata-service.test.ts  (+6 more)
src/test/: setup.ts  test-utils.tsx
src/types/: controllers.ts  diagnostics.ts  media.ts  react-jsx.d.ts  settings.ts
src/use-cases/: add-media.test.ts  add-media.ts  change-library-path.test.ts  change-library-path.ts  create-channel.test.ts  create-channel.ts  create-media.test.ts  create-media.ts  delete-media.test.ts  delete-media.ts  delete-selected-channel.test.ts  delete-selected-channel.ts  initialize-app-settings.test.ts  initialize-app-settings.ts  mark-media-unwatched.test.ts  mark-media-unwatched.ts  mark-media-watched.test.ts  mark-media-watched.ts
src/utils/: app-error.test.ts  app-error.ts  app-logger.test.ts  app-logger.ts  avatar.test.ts  avatar.ts  controller-helpers.test.ts  controller-helpers.ts  (+30 more)
(+91 files in other folders)
