[package]
name = "kavynex"
version = "1.1.1"
description = "Desktop app for backing up YouTube channels, organizing saved media, and playing local video/audio files."
authors = ["Eduardo Hillesheim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kavynex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kavynex"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
base64 = "0.22.1"
sha2 = "0.10.9"
flate2 = "1"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "io-util", "net", "test-util"] }
tauri-plugin-os = "2.3.2"
chrono = "0.4.44"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "rustls-platform-verifier"] }
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "http1", "tokio"] }
http-body-util = { version = "0.1", default-features = false }
http = "1"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
hyper = { version = "1", default-features = false }
ts-rs = "12.0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
